# MusicPlayer

./: CMakeLists.txt
src/: MainWindow.cpp  MainWindow.h
